--- a/bio.html
+++ b/bio.html
@@ -18,6 +18,10 @@
   </div>
 
   <section class="contact-container">
+    <div class="cities">
+      <h4>My History</h4>
+    </div>
+    <div class="cities">
 Bernard Boadi is 24 years of age comes from holland but lives in England, grduated from Milton college doing first degree in Northampton University.
 At milton keynes college Bernard studied access to business studies and basic application in law with distinction grade. During his studies in the college, he won several awards relating to business economics, marketing and law. <br>
 He also contested several compititions for his school wining national leadership institute award which has became history since the college was established. <br>
@@ -26,9 +30,42 @@ Northampton University offered Bernard a scholaship in his fist degree in Bsc En
 He is very sociable and always putting smile in everyone face and due to his outstanding character friends call him "Mr on point". He enjoys music and and singing with the chior every sunday due to his religious background. Irrespective of his academic achievements, being loyal and nice to his friends, he still have ambition of being a live changer and a Pastor in the future.
 
 </p>
+</div>
   </section>
 
-  </body>
 
+  </body>
+  <footer class="foot">
+    <div class="container">
+    <div class="row">
+      <p> <i>Acess information below:</i></p>
+    <div class="bottom-foot">
+    <div class="col-md-5">@ copywrite Jesus my saviour 2016.</div>
+
+    <h4>Contact Manager</h4>
+    <div class= "add">
+      203 Saxon Street <br>
+      Broadline Way <br>
+      Milton Keynes <br>
+      MK6 8PZ <br>
+      <p>Telephone:<br>
+        01908 358154 <br>
+        fax: 0044 748956230 <br>
+      </p>
+    </div>
+    <div class="col-md-7">
+              <ul class="footnav">
+              <li><a href="index.html">home</a></li>
+              <li><a href="cv.html">cv</a></li>
+              <li><a href="bio.html">bio</a></li>
+              <li><a href="contact.html">contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+  </footer>
+  <!--footer ends-->
 
 </html>
